fix for center alignment on button

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7057,6 +7057,10 @@ hr {
   margin: 33px 0 0 0;
 }
 
+.bva .fullwidth.center .inner .buttons {
+  justify-content: center;
+}
+
 a.btn--primary {
   background: #57AD68;
   outline: none;
